2004-08-12 Gareth Jones <gareth_jones@users.berlios.de>

	* scripts/pkgunpack.in (unpack_archives): Make sure build directories
	  exist.

	* scripts/pkginstall.in (cleanup_failed): Added FIXME for restoring
	  backups.

2004-08-06 Gareth Jones <gareth_jones@users.berlios.de>

	* scripts/pkgadd.in: Added -f/--leave-files option.
	* man/pkgadd.8.in: Documented -f/--leave-files option.

	* All files: Changed Oliver's email address to
	  <oliverbrakmann@users.berlios.de>.

2004-08-05 Gareth Jones <gareth_jones@users.berlios.de>

	* scripts/pkgadd.in (get_package_list): Dependency checking is
	  actually skipped if $stage < 2.

	* man/pkginstall.8.in: Added note about restoring a backed-up package
	  after a failed installation.

	* man/pkgadd.8.in: Written.

	* scripts/libprometheus.bash.in (set_directory): Build packages in
	  $builddir/$package ($package_builddir) instead of $builddir.
	* scripts/pkgunpack.in: Use $package_builddir where appropriate.
	* scripts/pkgadd.in: Remove $package_builddir if installation
	  successful.

2004-08-04 Gareth Jones <gareth_jones@users.berlios.de>

	* scripts/pkgadd.in: Dependency checking implemented.

	* scripts/libprometheus.bash.in (remove_dupes): Added.
	* scripts/compact.in: Removes duplicate file/directory arguments.
	* scripts/pkgget.in: Removes duplicate package arguments.
	* scripts/pkgunpack.in: Removes duplicate package arguments.
	* scripts/pkgbuild.in: Removes duplicate package arguments.
	* scripts/pkgcheck.in: Removes duplicate package arguments.
	* scripts/pkginstall.in: Removes duplicate package arguments.

	* scripts/libprometheus.bash.in: Added get_deps, get_dependencies,
	  get_profile_var, get_profile_array & echo_array.
	* scripts/libprometheus.bash.in (override_array): Much simplified.

2004-08-03 Gareth Jones <gareth_jones@users.berlios.de>

	* scripts/libprometheus.bash.in (source_profile, open_package): Takes
	  package as argument instead of profile.  Searches current working