@@ -1,0 +1,5 @@
+To run the testsuite, invoke
+
+	make check
+
+*after* installing prometheus.
