@@ -1,3 +1,12 @@
+2004-08-15 Gareth Jones <gareth_jones@users.berlios.de>
+
+	* Makefile: Added building testsuite & check target.
+	* testsuite/Makefile: Added.
+	* testsuite/README: Added.
+
+	* testsuite/libprometheus/Makefile: Added.
+	* testsuite/libprometheus/finish/success.bash.in: Added.
+
 2004-08-12 Gareth Jones <gareth_jones@users.berlios.de>
 
 	* scripts/pkgunpack.in (unpack_archives): Make sure build directories
